# fanclash-api

./: .env  .gitattributes  .gitignore  Cargo.toml  capiyo  capiyo.pub  fly.toml  google-services.json
.sqlx/: query-13377f1fe6e1827f7bf9cfbf2a17c1ffc01e4b032a6b9c86d383f6949f852135.json
.zed/: settings.json
src/: config.rs  dumper.rs  errors.rs  main.rs  migrate.rs  state.rs
src/database/: connection.rs  hello
src/dtos/: auth_dtos.rs
src/handlers/: archive.rs  auth.rs  auth_otp.rs  b2c_handlers.rs  bets.rs  chat_handlers.rs  comrade_handler.rs  events_handler.rs  games.rs  kalka.rs  lineup_handler.rs  mod.rs  mpesa_handlers.rs  notification_handler.rs  pledges.rs  posta.rs  posts.rs  shida.rs  statistics_handler.rs  sub_fixture_handler.rs  upload.rs  user_profile.rs  vote_handlers.rs  ws_handler.rs
src/middleware/: auth.rs
src/models/: archive.rs  bets.rs  chat.rs  comments.rs  comrade.rs  events.rs  game.rs  games_comments.rs  games_likes.rs  line_up.rs  livegames.rs  mod.rs  mpesa_transactions.rs  notification.rs  otp.rs  payment.rs  pledges.rs  post.rs  post_commnets.rs  posta.rs  statistics.rs  sub_fixture.rs  transaction.rs  user.rs  user_profile.rs  vote.rs
src/models/clash/: mod.rs
src/models/feed/: mod.rs
src/routes/: archive.rs  auth.rs  auth_otp_routes.rs  bets.rs  chat.rs  comrade_route.rs  games.rs  mod.rs  mpesa.rs  pledges.rs  posts.rs  user_profile.rs  vote_routes.rs
src/services/: cloudinary.rs  fcm_service.rs  mod.rs  mpesa_service.rs  otp_service.rs  sms_service.rs
