[package]
name = "api"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
# Shuttle Framework - REQUIRED
shuttle-axum = "0.41.0"
shuttle-runtime = "0.41.0"
shuttle-secrets = "0.41.0"

# Web Framework - EXACTLY AS YOU HAD
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }  # REMOVED 'compression'

# Serialization - EXACTLY AS YOU HAD
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"

# Authentication & Security - EXACTLY AS YOU HAD
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Upload & Processing - EXACTLY AS YOU HAD
multer = "2.1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"
mime = "0.3"
axum-extra = { version = "0.9", features = ["multipart"] }
futures-util = "0.3"
thiserror = "1.0"
anyhow = "1.0.100"
reqwest = { version = "0.11", features = ["json", "multipart"] }
base64 = "0.21"
md5 = "0.7"
infer = "0.13"

# Database - EXACTLY AS YOU HAD
mongodb = "3.4.1"
bson = { version = "2.8", features = ["chrono-0_4"] }
validator = { version = "0.18", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
sqlx = "0.9.0-alpha.1"

# Redis - EXACTLY AS YOU HAD
redis = { version = "0.24", features = ["tokio-comp"] }

# Logging & Tracing - EXACTLY AS YOU HAD
tracing = "0.1"
tracing-subscriber = "0.3"

# Local development ONLY (remove for production)
dotenvy = "0.15"
dotenv = "0.15"
headers = "0.3"
