[package]
name = "api"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 2          # 3 is too aggressive for Render free tier compilation
lto = false            # lto = true causes OOM during compilation on free tier
codegen-units = 4      # 1 causes very slow/OOM compilation; 4 is a safe balance
strip = true
# panic = "abort" REMOVED — this was causing exit code 134 on any panic/unwrap

[dependencies]

# Web Framework
axum = { version = "0.7", features = ["macros", "ws"] }

tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"

# Authentication & Security
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10.2"

# Upload & Processing
multer = "2.1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"
mime = "0.3"
axum-extra = { version = "0.9", features = ["multipart"] }
futures-util = "0.3"
thiserror = "1.0"
anyhow = "1.0.100"
reqwest = { version = "0.11", features = ["json", "multipart"] }
base64 = "0.21"
md5 = "0.7"
infer = "0.13"

# Database
mongodb = "3.4.1"
bson = { version = "2.8", features = ["chrono-0_4"] }
validator = { version = "0.18", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
tokio-tungstenite = "0.21"

dashmap = "5"

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# OAuth2 / FCM
yup-oauth2 = "8.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
rs-firebase-admin-sdk = "2.4.0"

# Misc
dotenvy = "0.15"
dotenv = "0.15"
headers = "0.3"
rand = "0.8"